Fix error page text align

--- a/src/widgets/PageError/ui/PageError.module.scss
+++ b/src/widgets/PageError/ui/PageError.module.scss
@@ -5,6 +5,7 @@
   height: 100vh;
   gap: 16px;
   justify-content: center;
+  padding: 24px;
   width: 100%;
 }
 
